# ZeusServerEngine

./: .gitignore  README.md
Plugins/Unreal/ZeusMapTools/: README.md  ZeusMapTools.uplugin
Plugins/Unreal/ZeusMapTools/Source/ZeusMapTools/: ZeusMapTools.Build.cs
Plugins/Unreal/ZeusNetwork/: README.md  ZeusNetwork.uplugin
ZeusServerEngine/: .gitignore  CMakeLists.txt  README.md  ZeusServerEngine.sln
ZeusServerEngine/ClientTest/: README.md  package-lock.json  package.json
ZeusServerEngine/ClientTest/scripts/: network-validate-006-009-011.cmds  network-validate-reliable-loss.cmds  network-validate-timeout-1.cmds  network-validate-timeout-2.cmds
ZeusServerEngine/ClientTest/src/: ZeusPacketBuilder.ts  ZeusPacketParser.ts  ZeusPacketReader.ts  ZeusPacketWriter.ts  ZeusProtocol.ts  index.ts
ZeusServerEngine/Config/: server-collision-smoke.example.json  server-world-smoke.example.json  server.json
ZeusServerEngine/Data/Maps/Lobby/: debug_collision.json  static_collision.zsm
ZeusServerEngine/Data/Maps/TestWorld/: debug_collision.json  dynamic_collision.zsm  static_collision.zsm
ZeusServerEngine/Docs/: COLLISION.md  COLLISION_STREAMING.md  COLLISION_TESTS.md  MAP_TRAVEL.md  MOVEMENT.md  NETWORK.md  NETWORK_TESTS.md  NEXT_STEPS.md  WORLD.md  WORLD_TESTS.md
ZeusServerEngine/Scripts/: Fetch-Jolt.ps1
ZeusServerEngine/Source/ZeusApp/: ZeusApp.vcxproj
ZeusServerEngine/Source/ZeusApp/Private/: CoreServerApp.cpp  ServerPaths.cpp  main.cpp
ZeusServerEngine/Source/ZeusApp/Public/: CoreServerApp.hpp  ServerPaths.hpp
ZeusServerEngine/Source/ZeusCollision/: ZeusCollision.vcxproj
ZeusServerEngine/Source/ZeusCollision/Private/: CollisionAsset.cpp  CollisionDebug.cpp  CollisionTestScene.cpp  CollisionWorld.cpp  DynamicCollisionWorld.cpp  JoltConversion.cpp  JoltShapeFactory.cpp  PhysicsWorld.cpp  ZsmCollisionLoader.cpp  ZsmDynamicLoader.cpp  ZsmTerrainLoader.cpp
ZeusServerEngine/Source/ZeusCollision/Public/: CollisionAsset.hpp  CollisionDebug.hpp  CollisionEntity.hpp  CollisionShape.hpp  CollisionShapeType.hpp  CollisionTestScene.hpp  CollisionWorld.hpp  DynamicCollisionAsset.hpp  DynamicCollisionWorld.hpp  JoltConversion.hpp  JoltShapeFactory.hpp  PhysicsWorld.hpp  TerrainCollisionAsset.hpp  ZsmBinReader.hpp  ZsmCollisionFormat.hpp  ZsmCollisionLoader.hpp  ZsmDynamicFormat.hpp  ZsmDynamicLoader.hpp  ZsmTerrainFormat.hpp  ZsmTerrainLoader.hpp
ZeusServerEngine/Source/ZeusCore/: ZeusCore.vcxproj
ZeusServerEngine/Source/ZeusCore/Private/: ZeusCoreStub.cpp
ZeusServerEngine/Source/ZeusCore/Public/: ZeusId.hpp  ZeusLog.hpp  ZeusNonCopyable.hpp  ZeusResult.hpp  ZeusTime.hpp  ZeusTypes.hpp
ZeusServerEngine/Source/ZeusGame/: README.md  ZeusGame.vcxproj
ZeusServerEngine/Source/ZeusGame/Private/Entities/: CharacterActor.cpp
ZeusServerEngine/Source/ZeusGame/Private/Movement/: MovementComponent.cpp  MovementSystem.cpp  MovementTests.cpp
ZeusServerEngine/Source/ZeusGame/Public/Entities/: CharacterActor.hpp
ZeusServerEngine/Source/ZeusGame/Public/Movement/: MovementComponent.hpp  MovementSystem.hpp  MovementTests.hpp
ZeusServerEngine/Source/ZeusMath/: ZeusMath.vcxproj
ZeusServerEngine/Source/ZeusMath/Private/: Bounds.cpp  MathUtils.cpp  Quaternion.cpp  Rotator.cpp  Transform.cpp  Vector3.cpp
ZeusServerEngine/Source/ZeusMath/Public/: Bounds.hpp  MathConstants.hpp  MathUtils.hpp  Quaternion.hpp  Rotator.hpp  Transform.hpp  Vector3.hpp
ZeusServerEngine/Source/ZeusNet/: ZeusNet.vcxproj
ZeusServerEngine/Source/ZeusNet/Private/: ChannelConfig.cpp  NetConnection.cpp  NetConnectionManager.cpp  NetworkDiagnostics.cpp  NetworkSimulator.cpp  PacketAckTracker.cpp  SendQueue.cpp  UdpEndpoint.cpp  UdpServer.cpp  UdpSocket.cpp
ZeusServerEngine/Source/ZeusNet/Public/: ChannelConfig.hpp  NetConnection.hpp  NetConnectionManager.hpp  NetTypes.hpp  NetworkDiagnostics.hpp  NetworkSimulator.hpp  PacketAckTracker.hpp  PacketStats.hpp  ReliabilityLayer.hpp  SendQueue.hpp  UdpEndpoint.hpp  UdpServer.hpp  UdpSocket.hpp
ZeusServerEngine/Source/ZeusPlatform/: ZeusPlatform.vcxproj
ZeusServerEngine/Source/ZeusPlatform/Private/: ConsoleIo.cpp  ConsoleIo.hpp  PlatformConsole.cpp  PlatformConsoleLive.cpp  PlatformTime.cpp  ZeusLog.cpp
ZeusServerEngine/Source/ZeusPlatform/Public/: PlatformConsole.hpp  PlatformConsoleLive.hpp  PlatformTime.hpp
ZeusServerEngine/Source/ZeusProtocol/: ZeusProtocol.vcxproj
ZeusServerEngine/Source/ZeusProtocol/Private/: PacketBuilder.cpp  PacketHeaderWire.cpp  PacketParser.cpp  PacketReader.cpp  PacketWriter.cpp  SessionWire.cpp
ZeusServerEngine/Source/ZeusProtocol/Public/: ConnectRejectReason.hpp  NetChannel.hpp  NetDelivery.hpp  Opcodes.hpp  PacketBuilder.hpp  PacketConstants.hpp  PacketHeader.hpp  PacketHeaderWire.hpp  PacketParser.hpp  PacketReader.hpp  PacketTypes.hpp  PacketWriter.hpp  SessionWire.hpp
ZeusServerEngine/Source/ZeusRuntime/: ZeusRuntime.vcxproj
ZeusServerEngine/Source/ZeusRuntime/Private/: EngineLoop.cpp  ServerClock.cpp
ZeusServerEngine/Source/ZeusRuntime/Public/: EngineLoop.hpp  ServerClock.hpp  TickGroup.hpp  Tickable.hpp
ZeusServerEngine/Source/ZeusSession/: ZeusSession.vcxproj
ZeusServerEngine/Source/ZeusSession/Private/: ClientSession.cpp  SessionManager.cpp  SessionOpcodeRules.cpp  SessionPacketHandler.cpp
ZeusServerEngine/Source/ZeusSession/Public/: ClientSession.hpp  SessionEvents.hpp  SessionManager.hpp  SessionNetworkSettings.hpp  SessionOpcodeRules.hpp  SessionPacketHandler.hpp  SessionState.hpp
ZeusServerEngine/Source/ZeusWorld/: ZeusWorld.vcxproj
ZeusServerEngine/Source/ZeusWorld/Private/: Actor.cpp  ActorComponent.cpp  DebugPlayerActor.cpp  EntityManager.cpp  Level.cpp  MapInstance.cpp  RegionSystemTests.cpp  World.cpp  WorldRuntime.cpp  WorldStats.cpp  ZeusRegionSystem.cpp
ZeusServerEngine/Source/ZeusWorld/Public/: Actor.hpp  ActorComponent.hpp  ActorLifecycle.hpp  ActorTick.hpp  DebugPlayerActor.hpp  EntityHandle.hpp  EntityId.hpp  EntityManager.hpp  Level.hpp  MapInstance.hpp  RegionSystemTests.hpp  SpawnParameters.hpp  World.hpp  WorldRuntime.hpp  WorldStats.hpp  ZeusRegionSystem.hpp
(+35 files in other folders)
